--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "matthiasmullie/minify": "1.3.61",
     "coffeecode/paginator": "^1.0",
     "coffeecode/uploader": "1.0.*",
-    "ausi/slug-generator": "^1.1"
+    "ausi/slug-generator": "^1.1",
+    "phpmailer/phpmailer": "^6.1"
   }
 }
