--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,4 @@ RewriteEngine On
 Options All -Indexes
 RewriteCond %{SCRIPT_FILENAME} !-f
 RewriteCond %{SCRIPT_FILENAME} !-d
-# RewriteRule ^(.*)$ index.php?route=/$1 [L,QSA]
-
-RewriteCond %{REQUEST_METHOD} OPTIONS
-RewriteRule ^(.*)$ $1 [R=200,L]
+RewriteRule ^(.*)$ index.php?route=/$1 [L,QSA]
