--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "coffeecode/paginator": "^1.0",
     "coffeecode/uploader": "1.0.*",
     "ausi/slug-generator": "^1.1",
-    "phpmailer/phpmailer": "^6.1"
+    "phpmailer/phpmailer": "^6.1",
+    "coffeecode/optimizer": "2.0.*"
   }
 }
