Adicionando detalhes no dash - home

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
       "name": "Caio Dellano",
       "email": "bladelano@gmail.com",
       "role": "Developer",
-      "homepage": "https://www.dellanosiste.com.br"
+      "homepage": "https://www.dellanosites.com.br"
     }
   ],
   "autoload": {
